添加token.js和相关调整。

--- a/src/main/resources/static/m/list.html
+++ b/src/main/resources/static/m/list.html
@@ -16,6 +16,8 @@
     <!-- RSA加密解密 -->
     <script src="/webjars/jsencrypt/bin/jsencrypt.js"></script>
     <script src="/js/utils/rsa.js"></script>
+    <!-- token相关方法 -->
+    <script src="/js/utils/token.js"></script>
     <style>
         .right {
             float: right
